# touhou-scs

./: .gitignore  export.py  main.js  main.py  package-lock.json  package.json  pyproject.toml  remember.txt  setup_curves.py  test_triggers.py  touhou scs.gmd
touhou_scs/: component.py  curve_optimizer.py  curve_optimizer_v2.py  enums.py  lib.py  misc.py  movements.py  movements_v2.py  types.py  utils.py
